objects/Opportunity/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Method</label>
    <referenceTo>Contact_Method__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>