objects/Opportunity/fields/Source_Order__c.field-meta.xml
<CustomField>
    <fullName>Source_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>